# Electronic-Library

./: .gitignore  CMakeLists.txt  README.md  database.h  definitions.h  main.c  menus.h  records.h
database/: database.c  database.h  database.txt
lists/: lists.c  lists.h
menus/: menu.txt  menus.c  menus.h
records/: records.c  records.h
utils/: utils.c  utils.h
